kubernetes/grafana/network.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  selector:
    istio: cluster-ingress
  servers:
  - port:
      number: 3000
      name: http
      protocol: HTTP
    hosts:
    - "cluster.codedesignplus.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: monitoring
spec:
  hosts:
  - "cluster.codedesignplus.com"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: grafana-server.monitoring.svc.cluster.local
        port:
          number: 80
    rewrite:
      uri: "/"
